# Ui_Api_gRPC_testProject

./: .gitignore  Jenkinsfile  README.md  config.py  pyproject.toml  pytest.ini  testit.ini
src/tool_shop/data/: data.py  helpers.py  utils.py
src/tool_shop/pages/android_app_pages/: app_cart_page.py  app_main_page.py
src/tool_shop/pages/web_pages/: account_page.py  cart_page.py  favorites_page.py  main_page.py  product_page.py  registration_page.py  sing_in_page.py  utils.py
src/tool_shop/utils/: api_client.py  schemas.py  validators.py
tests/: conftest.py
tests/android_app/: conftest.py  test_app_cart_page.py  test_app_main_page.py
tests/api/: conftest.py  test_api_cart_page.py  test_api_products.py  test_api_user.py
tests/gRPC/: product_pb2_grpc.py
tests/grpc/: conftest.py  grpc_utils.py  product_pb2.py  product_pb2_grpc.py  server.py  test_grpc.py
tests/grpc/proto/: product.proto
tests/ui/: conftest.py  main_page_tests.py  test_cart_page.py  test_e2e.py  test_main_page.py  test_product_page.py  test_sing_in_page.py
