[project]
name = "tool_shop"
version = "0.1.0"
description = ""
authors = [
    {name = "Yana Zaitseva", email = "zaitseva.yg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

# CORE
pytest = "7.4.4"
pytest-playwright = "^0.7.2"
playwright = "^1.47.0"
allure-pytest = "^2.13.3"

# API
requests = "^2.31.0"
jsonschema = "4.26.0"
python-dotenv = "^1.2.1"



[tool.poetry]
packages = [{include = "tool_shop", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Playwright
[tool.playwright]
chromium = true
firefox = false
webkit = false
